--- a/static/css/common.css
+++ b/static/css/common.css
@@ -2,6 +2,20 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0px auto;
 }
+#header_username{
+    border: 1px solid #dadeff;
+    border-radius: 8px;
+    background-color: #f1f6f7;
+    padding: 0px 6px 1px 6px;
+    float: right;
+    position: relative;
+    top:18px;
+    font-size: 20px;
+    font-weight: 500;
+    color: #001dc4;
+    left: 59%;
+    
+}
 #header_container{
    
     height: auto;
