--- a/static/css/form.css
+++ b/static/css/form.css
@@ -4,7 +4,7 @@
     font-size: 16px;
     outline: 0;
     color: rgb(78, 78, 78);
-    width: 300px;
+    width: 108%;
     border-width: 0 0 2px;
     background-color:#e9e9e9;
     border-color: rgb(153, 153, 153);
