--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -82,3 +82,13 @@
     position: relative;
     bottom: 788px;
 }
+.warn_div{
+    position: relative;
+}
+.warning{
+    position: absolute;
+    display: none;
+    top: -13px;
+    font-size: 12px;
+    color: rgb(211, 0, 0);
+}
